# python-resilio-sync-unofficial

./: .gitignore  LICENSE  README.md  config.json.example  pyproject.toml
rslsync/: __init__.py  api.py  cli.py
rslsync/commands/: file.py  folder.py  fs.py  general.py  stat.py
