[tool.poetry]
name = "rslsync"
version = "0.1.0"
description = "A Python client of unofficial Resilio Sync API"
authors = ["Zhongke Chen <github@ch3n2k.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
