[tool.poetry]
name = "rslsync"
version = "0.4.0"
description = "A Python client library and CLI of unofficial Resilio Sync API"
authors = ["Zhongke Chen <github@ch3n2k.com>"]
maintainers = []
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zhongkechen/python-resilio-sync-unofficial"
repository = "https://github.com/zhongkechen/python-resilio-sync-unofficial"
documentation = "https://github.com/zhongkechen/python-resilio-sync-unofficial"
keywords = ["resilio", "btsync", "sync", "unofficial"]
classifiers = ["Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Topic :: Communications :: File Sharing"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
rsl = "rslsync.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
